# tg_spam_bot

./: .dockerignore  .env.test  .flake8  .gitignore  DOCKER.md  Dockerfile  Dockerfile.bak  FILE_STRUCTURE.md  LICENSE  README-ci.md  README-docker.md  README.md  README.md.new  README_fixed.md  char_map.json  docker-compose-with-db.yml  docker-compose.yml  env.example  filters.json  main.py  mypy.ini  pyproject.toml  setup.sh  test-ci.sh  test-uv.dockerfile  test_normalize.py  test_spam_filter.py
.github/workflows/: ci.yml
core/: __init__.py  admin.py  bot.py  handlers.py
docs/: docker.md
models/: __init__.py  settings.py
scripts/: check_types.sh  deploy_to_hetzner.sh  deploy_with_agent.sh  generate_mypy_baseline.sh  test_locally.sh
tests/: __init__.py  test_normalize.py  test_spam_filter.py
utils/: __init__.py  debug.py  regex.py
